k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parlor
  namespace: parlor
spec:
  selector:
    app: parlor
  ports:
    - port: 80
      targetPort: 3010
