k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlor
  namespace: parlor
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - parlor.whatsdoom.com
      secretName: parlor-tls
  rules:
    - host: parlor.whatsdoom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlor
                port:
                  number: 80
